# Anh-Penguin

./: .gitignore  Processes_and_Signals.md  README.json  README.md  Signal.md  Socket.md  Terminal.md  cssForMarkdow.css
Enviroment/: Enviroment_Module_1.md  Enviroment_Module_2.md  Enviroment_Module_4.md  Enviroment_Module_5.md  Enviroment_Module_6.md  Enviroment_Module_7.md  Enviroment_Module_8.md
IPC_Pipes/: IPC_Pipes_Module_1.md  IPC_Pipes_Module_2.md  IPC_Pipes_Module_3.md
POSIX_Threads/: POSIX_Threads_Module_1.md  POSIX_Threads_Module_2.md  POSIX_Threads_Module_3.md  POSIX_Threads_Module_4.md  POSIX_Threads_Module_5.md
Processes_and_Signals/: Processes_and_Signals_Module_1.md  Processes_and_Signals_Module_2.md  Processes_and_Signals_Module_3.md  Processes_and_Signals_Module_4.md  Processes_and_Signals_Module_5.md
Semaphores_Shared_Memory_Message_Queues/: Semaphores_Shared_Memory_Message_Queues_Module_1.md  Semaphores_Shared_Memory_Message_Queues_Module_2.md
Socket/: Socket_Module_1.md
Working_with_Files/: File_Discriptor.md  WorkingWithFile_Module_4.md  WorkingWithFile_Module_5.md  WorkingWithFile_Module_6.md  WorkingWithFile_Module_7.md
cppProgram/: CMakeLists.txt  hello.txt  main.cpp
cppProgram/include/: internetSocket_common.hpp  unixSocket_common.hpp
cppProgram/internetSocket/: CMakeLists.txt  internetSocket_client.cpp  internetSocket_common.hpp  internetSocket_server.cpp
cppProgram/runProcess/: CMakeLists.txt  runProcess_main.cpp
cppProgram/src/: CMakeLists.txt  cppCheckTest.cpp  internetSocket_client.cpp  mainProcess.cpp  multi_arg_thread.cpp  pThread.cpp  src_1_mainProcess.cpp  unix_server.cpp  waiter.cpp  writer.cpp
cppProgram/src_1/: CMakeLists.txt  CmakeLists.txt  src_1_printName.cpp
cppProgram/src_2/: CMakeLists.txt  src_2_mainProcess.cpp  src_2_subProcess.cpp
cppProgram/src_3/: CMakeLists.txt  common.hpp  waiter.cpp  worker.cpp
cppProgram/src_4/: CMakeLists.txt  reader.cpp  shared_data.h  writer.cpp
cppProgram/src_5/: CMakeLists.txt
cppProgram/unixSocket/: CMakeLists.txt
